--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <meta charset="utf-8" />
         <meta content="IE=edge" http-equiv="X-UA-Compatible" />
         <meta content="width=device-width,initial-scale=1" name="viewport" />
+
+        <link rel="stylesheet" href="/dist/style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <div id="content"></div>
+        <script src="/dist/script.js"></script>
     </body>
 </html>
