--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <meta content="IE=edge" http-equiv="X-UA-Compatible" />
         <meta content="width=device-width,initial-scale=1" name="viewport" />
 
-        <link rel="stylesheet" href="/dist/style.css">
+        <link rel="stylesheet" href="/dist/preload.css">
     </head>
     <body>
         <div id="content"></div>
+        <link rel="stylesheet" href="/dist/style.css">
         <script src="/dist/script.js"></script>
     </body>
 </html>
