--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <div id="content"></div>
+        <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
         <link rel="stylesheet" href="/dist/style.css">
         <script src="/dist/script.js"></script>
     </body>
