Добавлен заголовок страницы

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <link rel="stylesheet" href="/dist/preload.css">
     </head>
     <body>
+        <header id="header">
+            <div class="ribbon"></div>
+            <h1 class="title">Никто не забыт и ничто не забыто</h1>
+            <cite class="cite">О.Ф.Берггольц</span>
+        </header>
         <div id="content"></div>
         <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
         <link rel="stylesheet" href="/dist/style.css">
