Добавлено объявление в правом нижнем углу

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             <cite class="cite">О.Ф.Берггольц</span>
         </header>
         <div id="content"></div>
+        <div id="message">
+            <p>
+                Приглашаем Вас на торжественный <strong>митинг Памяти</strong>,
+                посвящённый 74-й годовщине Победы в Великой Отечественной Войне,
+                который состоится <strong>7 мая 2019 года в 13:30</strong>, у Памятника студентам и
+                преподавателям ЛЭТИ, погибшим в годы войны.
+            </p>
+            <div class="students"></div>
+        </div>
         <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
         <link rel="stylesheet" href="/dist/style.css">
         <script src="/dist/script.js"></script>
