Стартовые стили перенесены в html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#b27529">
 
-        <link rel="stylesheet" href="/dist/preload.css">
+        <style>
+            html, body {
+                overflow: hidden;
+                height: 100%;
+                margin: 0;
+                background-color: #05336e;
+                font-family: "Roboto", Arial, sans-serif;
+            }
+
+            #content {
+                height: 100%;
+                background: #05336e url("/img/loading.gif") no-repeat center center;
+            }
+        </style>
     </head>
     <body>
         <header id="header">
